8377010: Source code launcher cannot call inherited main from another package/module